# rttometer

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  test
app/: abort.h  client.cpp  client.h  context.h  main.cpp  server.cpp  server.h
scripts/: full_rtt_analyze.py  parse_perf.py  period_series.py  single_rtt_analyze.py
src/: client.cpp  context.h  main.cpp  serialize.h  server.cpp  test.cpp
